add initial fixed navbar, sticky footer,and table changes

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -2,3 +2,27 @@
 @import "neat";
 @import "./bootstrap";
 @import "./bootstrap-theme";
+
+/*** Base Elements ***/
+body {
+  min-height: 2000px;
+  padding-top: 70px;
+}
+
+/*** Chart ***/
+.form-control {
+  background-color: transparent !important;
+  border: none !important;
+  text-align: center;
+}
+
+.table-head {
+  text-align: center;
+}
+
+/*** Footer ***/
+.footer {
+  height: 200px;
+  background-color: black;
+}
+
