--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -10,15 +10,25 @@
   src: local('Open Sans Light'), local('OpenSans-Light'), url(./fonts/DXI1ORHCpsQm3Vp6mXoaTRampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
+/* latin */
+@font-face {
+  font-family: 'Open Sans Bold';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(./fonts/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
 /*** Base Elements ***/
 body {
   font-family: 'Open Sans';
-  min-height: 2000px;
-  padding-top: 50px;
+  // min-height: px;
+  padding-top: 67px;
 }
 
 /*** Chart ***/
 .form-group {
+  min-height: 100;
   margin: 10px 0;
 }
 .form-control {
@@ -33,7 +43,7 @@ body {
 
 /*** Footer ***/
 .footer {
-  height: 20px;
+  height: 22px;
   background-color: black;
   opacity: 0.8;
 }
