--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -43,8 +43,8 @@ body {
 
 /*** Footer ***/
 .footer {
-  height: 22px;
-  background-color: black;
+  height: 19px;
+  // background-color: black;
   opacity: 0.8;
 }
 
