--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -21,7 +21,7 @@
 }
 /*** Base Elements ***/
 body {
-  font-family: 'Open Sans Bold';
+  font-family: 'Open Sans';
   // min-height: px;
   padding-top: 67px;
 }
@@ -38,7 +38,7 @@ body {
 }
 
 .table-head {
-  font-family: 'Open Sans Bold';
+  font-family: 'Open Sans';
   text-align: center;
   font-size: 1.2em;
 }
