--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -5,24 +5,49 @@
 
 /*** Base Elements ***/
 body {
+  background: #f5f5f5;
+  color: #777;
   min-height: 2000px;
-  padding-top: 70px;
+  padding-top: 8.375em;
+}
+
+/*** Navbar ***/
+.navbar-brand {
+  /*margin: 0 auto;*/
+  /*width: 50%;*/
+}
+
+.navbar-fixed-top {
+  height: 7em;
 }
 
 /*** Chart ***/
+.form-group {
+  margin: 10px 0;
+}
+
 .form-control {
   background-color: transparent !important;
   border: none !important;
+  font-size: 18px;
   text-align: center;
+  height: 25px;
 }
 
 .table-head {
+  font-size: 25px;
+  letter-spacing: 1px;
   text-align: center;
+}
+
+.td:hover {
+  /*background-color: #dfebeb;*/
+  background-color: red;
 }
 
 /*** Footer ***/
 .footer {
-  height: 200px;
+  height: 80px;
   background-color: black;
 }
 
