add basic searchbar

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -78,3 +78,15 @@ tr {
   width: 1px;
   white-space: nowrap;
 }
+
+/*** Search Bar ***/
+.form-control {
+  padding-right: 30px;
+}
+
+.form-control + .glyphicon {
+  position: absolute;
+  right: 0;
+  padding: 8px 27px;
+}
+
