--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -19,6 +19,7 @@
   src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(./fonts/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
 /*** Base Elements ***/
 body {
   font-family: 'Open Sans';
@@ -30,8 +31,14 @@ h2 {
   font-weight: 900;
 }
 /*** Navbar ***/
-.dropdown {
-  position: relative;
+.navbar-brand {
+  position: absolute;
+  left: 16px;
+}
+
+.navbar-right {
+  position: absolute;
+  right: 16px;
 }
 
 /*** Chart ***/
@@ -40,15 +47,15 @@ h2 {
   margin: -8px 0;
   white-space: nowrap;
 }
-.form-control {
+
+.table-input {
   background-color: transparent !important;
   border: none !important;
-  box-shadow: transparent !important;
+  box-shadow: none !important;
   text-align: center;
   white-space: nowrap;
   white-space: nowrap;
   overflow: visible;
-  /*text-overflow: ellipsis;*/
 }
 
 .table-head {
@@ -58,8 +65,8 @@ h2 {
   white-space: nowrap;
   white-space: nowrap;
   overflow: hidden;
-  padding:0px;
-  margin:0px;
+  padding: 0px;
+  margin: 0px;
   /*text-overflow: ellipsis;*/
 }
 
@@ -79,22 +86,13 @@ tr {
 
 /*** Search Bar ***/
 .form-control {
-  padding-right: 30px;
-  margin: 5px 0;
+  margin: 8px 0;
 }
-
-/*#search-form {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  text-align: center;
-  margin: auto;
-}*/
 
 .form-control + .glyphicon {
   position: absolute;
   right: 0;
-  padding: 14px 27px;
+  padding: 17px 7px;
 }
 
 /*** Footer ***/
