--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -22,7 +22,7 @@
 
 /*** Base Elements ***/
 body {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Bold';
   padding-top: 67px;
 }
 
@@ -59,7 +59,7 @@ h2 {
 }
 
 .table-head {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Bold';
   text-align: center;
   font-size: 1.2em;
   white-space: nowrap;
