took out bourbon stack for simplification

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -1,7 +1,7 @@
 @import "normalize";
-@import "bourbon";
-@import "./base";
-@import "neat";
+// @import "bourbon";
+// @import "./base";
+// @import "neat";
 @import "./bootstrap";
 @import "./bootstrap-theme";
 
