--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -66,7 +66,7 @@ h2 {
   color: #5A5D67;
 }
 
-/*** Chart ***/
+/*** Table ***/
 .form-group {
   min-height: 100;
   margin: -8px 0;
@@ -107,6 +107,7 @@ tr {
   white-space: nowrap;
 }
 
+//boarder select blue color
 input[type=text]:focus, textarea:focus {
   box-shadow: 0 0 5px rgba(81, 203, 238, 1) !important;
   padding: 3px 3px 3px 3px !important;
@@ -114,9 +115,9 @@ input[type=text]:focus, textarea:focus {
   border: 1px solid rgba(81, 203, 238, 1) !important;
 }
 
-
+//darker stripe colors
 .table-striped > tbody > tr:nth-of-type(odd) {
-  /*background-color: #f3f3f3;*/
+  background-color: #f3f3f3;
   /*background-color: blue;*/
 }
 
