build a dynamic header

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -51,6 +51,7 @@ h2 {
 .navbar-right {
   position: absolute;
   right: 16px;
+  top: -5px;
 }
 
 .navbar-brand {
@@ -79,6 +80,7 @@ h2 {
   white-space: nowrap;
   white-space: nowrap;
   overflow: visible;
+  color: white;
 }
 
 /*** Table ***/
