finished flexiable header dropdown and search box

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -39,7 +39,9 @@ h2 {
 }
 /*** Navbar ***/
 
+
 .navbar-default {
+  //nav bar color
   background-image: linear-gradient(to bottom, #fff 0%, #8FBBBB 100%);
 }
 
@@ -56,6 +58,7 @@ h2 {
 }
 
 .navbar {
+  //nav bar to table spacing
   margin-bottom: 15px;
 }
 
