made the floor name input its own component

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -45,11 +45,11 @@ h2 {
   background-image: linear-gradient(to bottom, #fff 0%, #8FBBBB 100%);
 }
 
-.navbar-brand {
-  position: absolute;
-  left: 16px;
-  margin: -8px;
-}
+// .navbar-brand {
+//   position: absolute;
+//   left: 16px;
+//   margin: -8px;
+// }
 
 // .navbar-right {
 //   position: absolute;
@@ -57,10 +57,10 @@ h2 {
 //   top: -5px;
 // }
 
-.navbar {
-  //nav bar to table spacing
-  margin-bottom: 15px;
-}
+// .navbar {
+//   //nav bar to table spacing
+//   margin-bottom: 15px;
+// }
 
 .navbar-default .navbar-nav > li > a {
   color: #fff;
