--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -52,7 +52,7 @@ h2 {
 }
 
 .navbar-default .navbar-nav > li > a {
-  color: #fff;
+  color: #5f5f5f;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
@@ -67,7 +67,7 @@ h2 {
 
 //wapper to move the position of floor name input
 .floornamewrapper{
-  margin-top: 19px;
+  margin-top: 17px;
 }
 
 //to remove the box next to the input
