--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -25,7 +25,7 @@
 
 /*** Base Elements ***/
 body {
-  font-family: 'Open Sans' !important;
+  font-family: 'Open Sans Bold' !important;
   color: #5A5D67;
 }
 
@@ -99,7 +99,7 @@ h2 {
 }
 
 .table-head {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans Bold';
   text-align: center;
   font-size: 1.2em;
   font-weight: bolder;
