--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -128,7 +128,46 @@ tr {
 }
 
 /*** Search Bar ***/
-#search-control {
+// joe
+#custom-search-input {
+  margin:0;
+  margin-top: 10px;
+  padding: 0;
+  width: 40%;
+}
+
+#custom-search-input .search-query {
+/*    padding-right: 3px;
+  padding-right: 4px \9;
+  padding-left: 3px;
+  padding-left: 4px \9;*/
+  border-radius: 4px;
+  margin-bottom: 0;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+/*    width: 40%;*/
+}
+
+#custom-search-input button {
+  background: #fff;
+  border: 0;
+  border-radius: 4px;
+  color:#D9230F;
+  left: -28px;
+  margin-top: 2px;
+  margin-bottom: 0;
+  -moz-border-radius: 3px;
+  padding: 2px 5px;
+  position: relative;
+  -webkit-border-radius: 3px;
+  z-index: 3;
+}
+
+.search-query:focus + button {
+  z-index: 3;
+}
+
+/*#search-control {
   border-radius: 8px;
   margin: 8px 0;
   width: 200px;
@@ -139,7 +178,7 @@ tr {
   position: absolute;
   right: 0;
   padding: 17px 7px;
-}
+}*/
 
 /*** Footer ***/
 .footer {
@@ -171,8 +210,8 @@ tr {
   .dropdown {
     color: blue;
     position: absolute;
-    // left: -55px;
-    // top: -40px;
+/*    // left: -55px;
+    // top: -40px;*/
   }
 }
 
