positioning changes on navbar items

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -34,8 +34,6 @@ h2 {
   font-weight: 900;
 }
 /*** Navbar ***/
-
-
 .navbar-default {
   //nav bar color
   background-image: linear-gradient(to bottom, #fff 0%, #8FBBBB 100%);
@@ -75,11 +73,13 @@ h2 {
   background-color: transparent !important;
   border: none !important;
   box-shadow: none !important;
-  text-align: center;
-  white-space: nowrap;
-  overflow: visible;
   color: #363636;
   font-size: 1.5em;
+  left: -50px;
+  overflow: visible;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
 }
 
 /*** Table ***/
@@ -128,7 +128,6 @@ tr {
 }
 
 /*** Search Bar ***/
-// joe
 #custom-search-input {
   margin:0;
   margin-top: 10px;
@@ -137,25 +136,27 @@ tr {
 }
 
 #custom-search-input .search-query {
-/*    padding-right: 3px;
-  padding-right: 4px \9;
-  padding-left: 3px;
-  padding-left: 4px \9;*/
   border-radius: 4px;
+  left: 8px;
+  margin-top: -2.5px;
   margin-bottom: 0;
   -moz-border-radius: 3px;
+  padding-left: 3px;
+  /*padding-left: 4px \9;*/
+  padding-right: 3px;
+  /*padding-right: 4px \9;*/
+  position: relative;
   -webkit-border-radius: 3px;
-/*    width: 40%;*/
 }
 
 #custom-search-input button {
-  background: #fff;
+  background: none;
   border: 0;
   border-radius: 4px;
   color:#D9230F;
-  left: -28px;
-  margin-top: 2px;
+  left: -25px;
   margin-bottom: 0;
+  margin-top: 2px;
   -moz-border-radius: 3px;
   padding: 2px 5px;
   position: relative;
@@ -166,19 +167,6 @@ tr {
 .search-query:focus + button {
   z-index: 3;
 }
-
-/*#search-control {
-  border-radius: 8px;
-  margin: 8px 0;
-  width: 200px;
-  text-align: left;
-}
-
-.form-control + .glyphicon {
-  position: absolute;
-  right: 0;
-  padding: 17px 7px;
-}*/
 
 /*** Footer ***/
 .footer {
