--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -84,7 +84,7 @@ h2 {
 
 #floor {
   left: -20px;
-  padding-left: 50px;
+  margin-left: 50px;
   position: relative;
 }
 
@@ -134,6 +134,7 @@ h2 {
   padding-right: 3px;
   position: relative;
   -webkit-border-radius: 3px;
+  width: 400px;
 }
 
 /*#custom-search-input button {
