added uncss but put in comments because it does not work with react yet

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -65,7 +65,7 @@ h2 {
 
 //wapper to move the position of floor name input
 .floornamewrapper{
-  margin-top: 14px;
+  margin: 14px;
 }
 
 //to remove the box next to the input
