--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -1,34 +1,29 @@
 @import "normalize";
 @import "./bootstrap";
 @import "./bootstrap-theme";
-
 // body.portrait {
 //   -webkit-transform: rotate(90deg);
 // }
-
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(./fonts/DXI1ORHCpsQm3Vp6mXoaTRampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  src: local('Open Sans Light'), local('OpenSans-Light'), url("./fonts/DXI1ORHCpsQm3Vp6mXoaTRampu5_7CjHW5spxoeN3Vs.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-
 /* latin */
 @font-face {
   font-family: 'Open Sans Bold';
   font-style: normal;
   font-weight: 600;
-  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(./fonts/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
+  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url("./fonts/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-
 /*** Base Elements ***/
 body {
   font-family: 'Open Sans Bold' !important;
-  color: #5A5D67;
+  color: #5a5d67;
 }
-
 h2 {
   font-size: 20px;
   font-weight: 900;
@@ -38,36 +33,29 @@ h2 {
   //nav bar color
   background-image: linear-gradient(to bottom, #fff 0%, #8FBBBB 100%);
 }
-
 //for navbar collapase to work in mobile
 .navbar-collapse {
   // overflow: visible;
 }
-
 .navbar {
   //navbar to table spacing size
   margin-bottom: 16px;
 }
-
 .navbar-default .navbar-nav > li > a {
   color: #5f5f5f;
 }
-
 .navbar-default .navbar-nav > li > a:hover {
   background: transparent;
-  color: #5A5D67;
+  color: #5a5d67;
 }
-
 .navbar-default .navbar-nav > li > a:focus {
   background: transparent;
-  color: #5A5D67;
+  color: #5a5d67;
 }
-
 //wapper to move the position of floor name input
-.floornamewrapper{
+.floornamewrapper {
   margin: 14px;
 }
-
 //to remove the box next to the input
 .floorNameInput {
   background-color: transparent !important;
@@ -81,29 +69,23 @@ h2 {
   text-align: left;
   white-space: nowrap;
 }
-
 /*** Search Bar ***/
 #custom-search-input {
-  margin:0;
-  margin-top: 1px;
-  margin-bottom: -7px;
+  margin: 1px 0 -7px;
   padding: 0;
 }
-
 #custom-search-input .search-query {
   width: 300px;
 }
-
 //input text height, (how many rows to fit per view)
 .form-control {
-  height:35px;
+  height: 35px;
 }
-
 #search-button {
   background: none;
   border: 0;
   border-radius: 4px;
-  color: #8FBBBB;
+  color: #8fbbbb;
   left: -25px;
   top: 6px;
   margin-bottom: 0;
@@ -114,14 +96,12 @@ h2 {
   -webkit-border-radius: 3px;
   z-index: 3;
 }
-
 /*** Table ***/
 .form-group {
   min-height: 100;
   margin: -9px 0;
   white-space: nowrap;
 }
-
 .table-input {
   background-color: transparent !important;
   border: none !important;
@@ -130,7 +110,6 @@ h2 {
   white-space: nowrap;
   // overflow: visible;
 }
-
 .table-head {
   font-family: 'Open Sans Bold';
   text-align: center;
@@ -138,28 +117,23 @@ h2 {
   font-weight: bolder;
   white-space: nowrap;
   // overflow: hidden;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   text-overflow: ellipsis;
 }
-
 td {
   width: 1px;
   white-space: nowrap;
 }
-
 tr {
   width: 1px;
   white-space: nowrap;
 }
-
-
 //darker stripe colors
 .table-striped > tbody > tr:nth-of-type(odd) {
   background-color: #f3f3f3;
   /*background-color: blue;*/
 }
-
 /*** Footer ***/
 .footer {
   height: 19px;
@@ -167,35 +141,30 @@ tr {
   background-image: linear-gradient(to bottom, #8FBBBB 0%, #fff 100%);
   color: black;
 }
-
 .footer-info {
   font-family: 'Open Sans';
   font-size: 12px;
   text-align: center;
 }
-
 @media screen and (max-width: 767px) {
   #search-control {
     position: relative;
     right: 68px;
     top: -58px;
   }
-
   .form-control + .glyphicon {
-    padding: 0px 7px;
+    padding: 0 7px;
     position: relative;
     right: -100px;
     top: -106px;
   }
-
   .dropdown {
     color: blue;
     position: absolute;
-/*    // left: -55px;
+    /*    // left: -55px;
     // top: -40px;*/
   }
 }
-
 .navbar-collapse {
   overflow: hidden;
 }
