added async method of loading a select menu for editTable modal along with css

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -2,6 +2,7 @@
 // @import "bourbon";
 @import "./bootstrap";
 @import "./bootstrap-theme";
+@import "./select.scss";
 // body.portrait {
 //   -webkit-transform: rotate(90deg);
 // }
