--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -30,6 +30,10 @@ h2 {
   font-size: 20px;
   font-weight: 900;
 }
+
+.modal-content{
+  top: 61px;
+}
 /*** Navbar ***/
 .navbar-default {
   //nav bar color
