fix display bugs on edit table format

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -114,7 +114,7 @@ h2 {
   box-shadow: none !important;
   text-align: center;
   white-space: nowrap;
-  // overflow: visible;
+  overflow: visible;
 }
 .table-head {
   font-family: 'Open Sans Bold';
