attempt to include selectize

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -2,7 +2,8 @@
 // @import "bourbon";
 @import "./bootstrap";
 @import "./bootstrap-theme";
-@import "./select.scss";
+@import "./select";
+@import "selectize";
 // body.portrait {
 //   -webkit-transform: rotate(90deg);
 // }
